git: Update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 *~
+tex/RSS2017_PressPull.aux
+tex/RSS2017_PressPull.bbl
+tex/RSS2017_PressPull.blg
+tex/RSS2017_PressPull.dvi
+tex/RSS2017_PressPull.fdb_latexmk
+tex/RSS2017_PressPull.fls
+tex/RSS2017_PressPull.log
+tex/RSS2017_PressPull.out
+tex/RSS2017_PressPull.pdf
+tex/auto/
+tex/fig/
