tex: Add slides

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
 *~
+tex/RSS2017_PressPull_slides.aux
+tex/RSS2017_PressPull_slides.fdb_latexmk
+tex/RSS2017_PressPull_slides.fls
+tex/RSS2017_PressPull_slides.log
+tex/RSS2017_PressPull_slides.nav
+tex/RSS2017_PressPull_slides.out
+tex/RSS2017_PressPull_slides.pdf
+tex/RSS2017_PressPull_slides.snm
+tex/RSS2017_PressPull_slides.toc
+tex/RSS2017_PressPull_slides.vrb
 tex/RSS2017_PressPull.aux
 tex/RSS2017_PressPull.bbl
 tex/RSS2017_PressPull.blg
