tex: Contact workshop draft
Signed-off-by: Eric Huang <ehuang@gatech.edu>

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,14 @@ tex/RSS2017_PressPull.fls
 tex/RSS2017_PressPull.log
 tex/RSS2017_PressPull.out
 tex/RSS2017_PressPull.pdf
+tex/RSS2017_ContactWorkshop.aux
+tex/RSS2017_ContactWorkshop.bbl
+tex/RSS2017_ContactWorkshop.blg
+tex/RSS2017_ContactWorkshop.fdb_latexmk
+tex/RSS2017_ContactWorkshop.fls
+tex/RSS2017_ContactWorkshop.log
+tex/RSS2017_ContactWorkshop.out
+tex/RSS2017_ContactWorkshop.pdf
 tex/auto/
 tex/fig/
 data/
